# DensePose-ESP32

./: .env.example  .gitignore  AGENTS.md  BUGFIX_TODO.md  DELIVERY_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  PHASE2_SUMMARY.md  PLAN.md  README.md  TODO.md  build.sh  prompt.md
.claude/: ralph-loop.local.md
docs/: Deployment-Guide.md  Project-Status.md  TFLite-Integration-Guide.md  Testing.md  WiFi-Configuration.md
firmware/: CMakeLists.txt  README.md  sdkconfig.defaults
firmware/main/: CMakeLists.txt  Kconfig.projbuild  html_data.h  http_server.c  http_server.h  led_status.c  led_status.h  main.c  pose_inference.c  pose_inference.h  tflite_classifier.h  wifi_csi.c  wifi_csi.h
firmware/test/: CMakeLists.txt  wifi_csi_test.c
models/: README.md
models/training/: requirements.txt  train_pose_model.py
tools/: .coverage  analyze_csi.py  collect_csi_dataset.py  convert_tflite_to_header.py  generate_synthetic_data.py  load_wifi_env.py  pytest.ini  read_csi.py  requirements-dev.txt
tools/tests/: __init__.py  conftest.py  test_load_wifi_env.py
tools/visualizer/: index.html
